# claw-forge

./: .coverage  .coverage.bowen-XPS-8940.pid3785143.X02mlVox.HPvE0JBhRaYh  .coverage.bowen-XPS-8940.pid3785143.X7maYlax.HNQIp837rWOh  .coverage.bowen-XPS-8940.pid3786632.XOExVSqx.HNQIp837rWOh  .coverage.bowen-XPS-8940.pid3786632.Xqtv6eCx.HA0sTf94rRYh  .coverage.bowen-XPS-8940.pid3786657.X1TMK5mx.H1HPAsLG10Kh  .coverage.bowen-XPS-8940.pid3786657.XlEwNRyx.HNQIp837rWOh  .env.example  .gitignore  .pbr-state.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  PLAN.md  README.md  app_spec.example.xml  claw-forge.yaml  harness_readme_section.md  pyproject.toml
.claude/agents/: coding.md  initializer.md  reviewing.md  testing.md
.claude/commands/: check-code.md  checkpoint.md  claw-forge-status.md  create-bug-report.md  create-spec.md  expand-project.md  fix-spec.md  import-spec.md  pool-status.md  review-pr.md
.github/workflows/: agent-lint.yml  ci.yml  claw-forge-bot.yml  cloudflare-pages.yml  pages.yml  publish.yml  screenshots.yml  version-bump.yml
claw_forge/: __init__.py  cli.py  compute.py  config.py  exporter.py  hashline.py  lsp.py  output_parser.py  scaffold.py
claw_forge/agent/: __init__.py  hooks.py  lock.py  mcp_builder.py  output.py  permissions.py  rate_limit.py  runner.py  security.py  session.py  thinking.py  tools.py
claw_forge/boundaries/: __init__.py  apply.py  audit.py  classifier.py  cli.py  refactor.py  report.py  scorer.py  signals.py  walker.py
claw_forge/bugfix/: report.py
claw_forge/commands/: help_cmd.py  registry.py
claw_forge/commands_scaffold/: example.md  import-spec.md
claw_forge/git/: __init__.py  branching.py  cleanup.py  cli.py  commits.py  conflict_advisor.py  merge.py  repo.py  slug.py
claw_forge/github/: __init__.py  client.py  models.py  reporter.py
claw_forge/harness/: __init__.py  adversarial_evaluator.py  context_reset.py  handoff.py  pivot_decision.py
claw_forge/importer/: __init__.py  converter.py  detector.py  writer.py
claw_forge/mcp/: __init__.py  feature_mcp.py  sdk_server.py
claw_forge/orchestrator/: __init__.py  dispatcher.py  hooks.py  pool_runner.py  reviewer.py
claw_forge/plugins/: __init__.py  base.py  bugfix.py  coding.py  initializer.py  reviewer.py  testing.py
claw_forge/pool/: __init__.py  health.py  manager.py  model_resolver.py  router.py  tracker.py
claw_forge/spec/: __init__.py  app_spec.template.xml  parser.py  validator.py
claw_forge/state/: __init__.py  backend.py  file_claims.py  manifest.py  models.py  scheduler.py  service.py
claw_forge/ui_dist/: index.html
docs/: ARCHITECTURE.md  CONVENTIONS.md  COORDINATION.md  QUALITY.md  RESILIENCE.md  agent-skill.md  bmad-integration.md  brownfield.md  commands.md  faq.md  git-worktree-architecture.md  harness-patterns.md  multi-core-gpu-patterns.md  sdk-api-guide.md  workflows.md
docs/benchmarks/: harbor-protocol.md  results.md  swe-bench.md  terminal-bench.md
docs/middleware/: hashline.md  loop-detection.md  pre-completion-checklist.md
docs/plans/: 2026-03-05-provider-model-pool.md  2026-03-05-provider-model-selection-design.md  2026-03-06-motion-gsap-kanban-design.md  2026-03-06-motion-gsap-kanban.md  2026-03-06-parallel-cli-agents-design.md  2026-03-06-parallel-cli-agents.md  2026-03-06-three-phase-pipeline-design.md  2026-03-06-three-phase-pipeline.md  2026-03-07-git-workspace-tracking-design.md  2026-03-07-git-workspace-tracking.md
scripts/: agent-lint.sh  dev.sh
scripts/eval/: harbor_adapter.py  results_parser.py  terminal_bench.py
scripts/ralph/: .last-branch  CLAUDE.md  loop.sh  prd.json  progress.txt
skills/: app_spec.brownfield.template.xml  bug_report.template.md
skills/api-client/: SKILL.md
skills/clangd/: SKILL.md
skills/code-review/: SKILL.md
skills/database/: SKILL.md
skills/docker/: SKILL.md
skills/git-workflow/: SKILL.md
skills/gopls/: SKILL.md
skills/parallel-dispatch/: SKILL.md
skills/performance/: SKILL.md
skills/pyright/: SKILL.md
skills/rust-analyzer/: SKILL.md
skills/security-audit/: SKILL.md
skills/solidity-lsp/: SKILL.md
skills/systematic-debug/: SKILL.md
skills/test-driven/: SKILL.md
skills/typescript-lsp/: SKILL.md
skills/verification-gate/: SKILL.md
skills/web-research/: SKILL.md
tests/: conftest.py  helpers.py  test_additional_coverage.py  test_auto_checkpoint.py  test_auto_push.py  test_brownfield_spec.py  test_bug_fixes.py  test_bug_regressions.py  test_bugfix.py  test_cli_commands.py  test_cli_file_claims.py  test_cli_merge_gating.py  test_command_execution.py  test_compute.py  test_coverage_gaps.py  test_db_recovery.py  test_dispatcher.py  test_e2e_gaps.py  test_exporter.py  test_get_task_endpoint.py  test_handoff.py  test_harness_improvements.py  test_hashline.py  test_health.py  test_hooks.py  test_hooks_subagent_limit.py  test_human_input.py  test_kanban_backend.py  test_lock.py  test_lsp.py  test_manager.py  test_manifest.py  test_mcp_feature_server.py  test_model_resolver.py  test_oauth_optional.py  test_ollama_provider.py  test_pause_resume.py  test_plan_dependencies.py  test_plan_model.py  test_plan_reconcile.py  (+27 more)
tests/agent/: test_agent_runner.py  test_agent_session.py  test_hooks_advanced.py  test_mcp_builder.py  test_permissions.py  test_structured_output.py
tests/boundaries/: test_apply.py  test_audit.py  test_classifier.py  test_cli.py  test_refactor.py  test_report.py  test_scorer.py  test_signals.py  test_walker.py
tests/commands/: test_help_cmd.py
tests/e2e/: conftest.py  test_backend_e2e.py  test_cli_e2e.py  test_pool_e2e.py  test_ui_e2e.py
tests/eval/: test_harbor_adapter.py  test_results_parser.py  test_terminal_bench.py
tests/git/: test_branching.py  test_cleanup.py  test_cli_merge.py  test_cli_worktrees.py  test_commits.py  test_conflict_advisor.py  test_dispatcher_git.py  test_git_init.py  test_mcp_git_tools.py  test_merge.py  test_repo.py  test_slug.py  test_worktree.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
website/: comparison.html  features.html  index.html  tutorial.html
(+129 files in other folders)
