[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claw-forge"
version = "0.5.7"
description = "Multi-provider autonomous coding agent harness with API rotation pool"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "ClawInfra", email = "alex.chen31337@gmail.com" }]
keywords = ["ai", "agent", "coding", "claude", "llm", "multi-provider"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.12,<1",
    "rich>=13,<14",
    "httpx>=0.27,<1",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "pyyaml>=6,<7",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy[asyncio]>=2,<3",
    "aiosqlite>=0.20,<1",
    "anthropic>=0.40,<1",
    "claude-agent-sdk>=0.1.46,<1",
    "openai>=1.50,<2",
    "starlette>=0.40,<2",
    "websockets>=12,<14",
    "sse-starlette>=2,<3",
    # Transitive dep pins — Dependabot security alerts
    "pyjwt>=2.12.0",
    "pyasn1>=0.6.3",
    "requests>=2.33.0",
    "cryptography>=46.0.7",
    "pygments>=2.20.0",
]

[project.optional-dependencies]
bedrock = ["boto3>=1.35,<2", "anthropic[bedrock]>=0.40,<1"]
azure = ["azure-identity>=1.17,<2", "openai>=1.50,<2"]
vertex = ["anthropic[vertex]>=0.40,<1", "google-auth>=2,<3"]
postgres = ["asyncpg>=0.29,<1"]
all-providers = ["claw-forge[bedrock,azure,vertex]"]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<6",
    "playwright>=1.40,<2",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "types-PyYAML>=6,<7",
    "asyncpg>=0.29,<1",
]

[project.scripts]
claw-forge = "claw_forge.cli:app"

[project.entry-points."claw_forge.plugins"]
initializer = "claw_forge.plugins.initializer:InitializerPlugin"
coding = "claw_forge.plugins.coding:CodingPlugin"
testing = "claw_forge.plugins.testing:TestingPlugin"
reviewer = "claw_forge.plugins.reviewer:ReviewerPlugin"
bugfix = "claw_forge.plugins.bugfix:BugFixPlugin"

[project.urls]
Homepage = "https://github.com/clawinfra/claw-forge"
Repository = "https://github.com/clawinfra/claw-forge"
Issues = "https://github.com/clawinfra/claw-forge/issues"

[tool.hatch.build.targets.wheel]
packages = ["claw_forge"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "claw_forge/skills"
".claude/commands" = "claw_forge/commands_scaffold"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
    "ignore::ResourceWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.coverage.run]
source = ["claw_forge"]
branch = true
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.uv]
# Ensure the lockfile resolves wheels/sdists that work on both macOS (local
# dev) and Linux x86_64 (CI / GitHub Actions).  Without this, packages like
# claude-agent-sdk that ship only macOS ARM wheels will break CI.
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[dependency-groups]
dev = [
    "respx>=0.22.0",
    "types-pyyaml>=6.0.12.20250915",
]
